---------------------

* LUCENE-10078: Merge on full flush is now enabled by default with a timeout of
  500ms. (Adrien Grand)

* LUCENE-10585: Facet module code cleanup (copy/paste scrubbing, simplification and some very minor
  optimization tweaks). (Greg Miller)

* LUCENE-10603: Update SortedSetDocValues iteration to use SortedSetDocValues#docValueCount().
  (Greg Miller, Stefan Vodita)

* GITHUB#983: AbstractSortedSetDocValueFacetCounts internal code cleanup/refactoring. (Greg Miller)

Optimizations
---------------------
* LUCENE-8519: MultiDocValues.getNormValues should not call getMergedFieldInfos (Rushabh Shah)

* GITHUB#961: BooleanQuery can return quick counts for simple boolean queries.
  (Adrien Grand)

* LUCENE-10618: Implement BooleanQuery rewrite rules based for minimumShouldMatch. (Fang Hou)

* LUCENE-10480: Implement Block-Max-Maxscore scorer for 2 clauses disjunction. (Zach Chen, Adrien Grand)

* LUCENE-10606: For KnnVectorQuery, optimize case where filter is backed by BitSetIterator (Kaival Parikh)

* LUCENE-10593: Vector similarity function and NeighborQueue reverse removal. (Alessandro Benedetti)

* GITHUB#984: Use primitive type data structures in FloatTaxonomyFacets and IntTaxonomyFacets
  #getAllChildren() internal implementation to avoid some garbage creation. (Greg Miller)

Changes in runtime behavior
---------------------

* GITHUB#978: IndexWriter diagnostics written to index only contain java's runtime version
  and vendor. (Uwe Schindler)

Bug Fixes
---------------------

* LUCENE-10574: Prevent pathological O(N^2) merging. (Adrien Grand)

* LUCENE-10584: Properly support #getSpecificValue for hierarchical dims in SSDV faceting.
  (Greg Miller)

* LUCENE-10582: Fix merging of overridden CollectionStatistics in CombinedFieldQuery (Yannick Welsch)

* LUCENE-10563: Fix failure to tessellate complex polygon (Craig Taverner)

* LUCENE-10605: Fix error in 32bit jvm object alignment gap calculation (Sun Wuqiang)
